--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,16 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'cn.pedant.sweetalert:library:1.3'
+    compile('com.mikepenz:materialdrawer:3.0.6@aar') {
+        transitive = true
+    }
 }
