--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
             android:name=".activity.NewsActivity"
             android:label="@string/title_activity_news" >
         </activity>
+        <activity
+            android:name="com.shamanland.facebook.likebutton.FacebookLikeActivity"
+            android:label="@string/com_shamanland_facebook"
+            android:theme="@style/Theme.Facebook.Like"
+            />
     </application>
 
 </manifest>
