End of work Day.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
             android:label="@string/com_shamanland_facebook"
             android:theme="@style/Theme.Facebook.Like"
             />
+        <activity android:name=".activity.TestActivity"
+            android:label="TestActivity"/>
     </application>
 
 </manifest>
