--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.shamanland:facebook-like-button:0.1.8'
     compile 'com.diogobernardino:williamchart:1.7.0'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'com.akexorcist:RoundCornerProgressBar:1.2.0'
 }
