--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.smithysoft.englishclub" >
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,6 +35,9 @@
         <activity
             android:name=".activity.TestActivity"
             android:label="TestActivity" />
+        <activity
+            android:name=".activity.TTTTT"
+            android:label="TTTTT"/>
     </application>
 
 </manifest>
